--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Magaz</title>
-    <link rel="shortcut icon" href="https://nicolewedding.ru/local/templates/nicole_desktop/assets/img/nicolewedding.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.ico">
   </head>
   <body>
     <div id="root"></div>
