--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+            name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
     <title>Magaz</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo.ico">
   </head>
   <body>
     <div id="root"></div>
+    <script
+            src="https://code.jquery.com/jquery-3.6.0.js"
+            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+            crossorigin="anonymous"></script>
   </body>
+
 </html>
